Even spacing for the issue title text and image

--- a/app/static/features/covid19/_styles.sass
+++ b/app/static/features/covid19/_styles.sass
@@ -856,7 +856,7 @@ p > a
     font-size: 16px
 
   #scroller .txt-sm
-    font-size: 11px
+    font-size: 13px
 
   .caption
     font-size: 12px
@@ -941,8 +941,14 @@ p > a
   .txt-source
     border: 1px solid $color-hl
 
+  .txt-expert-author
+    padding-bottom: 0
+
   #scroll-item-intro
     height: auto
+
+    .row.bg-dk
+      margin-bottom: 8px
 
     .img-pan
       max-height: none
